# agent-desk

./: .gitignore  CLAUDE.md  README.md  README_CN.md  release-notes-v0.1.0.md
.github/workflows/: release.yml
config/: config.example.yaml  config.yaml
hooks/: Cargo.toml
hooks/src/: daemon.rs  main.rs
src/: pet.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  config.rs  events.rs  focus.rs  island.rs  lib.rs  main.rs  permission.rs  protocol.rs  remote.rs  send_input.rs  server.rs  session.rs  setup.rs  sse.rs  tray.rs  utils.rs
src-tauri/src/adapter/: claude_code.rs  codex.rs  mod.rs
src-tauri/src/process/: mod.rs  scanner.rs
