[package]
name = "agent-desk"
version = "0.1.0"
edition = "2024"
description = "Universal CLI agent monitor — desktop pet + system tray"
license = "MIT"

[lib]
name = "agent_desk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
open = "5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
    "Win32_Graphics_Gdi",
] }
